<resources>
    <string name="app_name">MadAlert</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navView">MadAlert\nmadalert17@gmail.com</string>
    <string name="imagenLogo">Imagen relacionada con la categoría de la alerta</string>

    <!--Strings para la pestaña 'Distritos'-->
    <string name="distritos_prompt">Selecciona un distrito</string>
    <string name="categorias_prompt">Selecciona una categoria</string>
    <string name="buscar">Mostrar</string>
    <string-array name="distritos_array">
        <item>Todos</item>
        <item>Arganzuela</item>
        <item>Barajas</item>
        <item>Carabanchel</item>
        <item>Centro</item>
        <item>Chamartín</item>
        <item>Chamberí</item>
        <item>Ciudad Lineal</item>
        <item>Fuencarral-El Pardo</item>
        <item>General</item>
        <item>Hortaleza</item>
        <item>Latina</item>
        <item>Moncloa-Aravaca</item>
        <item>Moratalaz</item>
        <item>Puente de Vallecas</item>
        <item>Retiro</item>
        <item>Salamanca</item>
        <item>San Blas-Canillejas</item>
        <item>Tetuán</item>
        <item>Usera</item>
        <item>Vicálvaro</item>
        <item>Villa de Vallecas</item>
        <item>Villaverde</item>
    </string-array>

    <string-array name="categorias_array">
        <item>Desastres y accidentes</item>
        <item>Terrorismo</item>
        <item>Criminalidad</item>
        <item>Tráfico</item>
        <item>Eventos</item>
        <item>Transporte público</item>
        <item>Contaminación</item>
    </string-array>


    <!-- Strings para 'Soporte' -->
    <string name="sop_tyc">Términos y condiciones</string>
    <string name="sop_intro">EL SOFTWARE SE PROPORCIONA "TAL CUAL", SIN GARANTÍA DE NINGÚN TIPO, EXPLÍCITA O IMPLÍCITA, INCLUYENDO PERO NO LIMITADO A LAS GARANTÍAS DE COMERCIABILIDAD, ADECUACIÓN PARA UN FIN DETERMINADO Y NO INFRACCIÓN. EN NINGÚN CASO, LOS AUTORES O TITULARES DE DERECHOS DE AUTOR SERÁN RESPONSABLES DE CUALQUIER RECLAMACIÓN, DAÑO O CUALQUIER OTRA RESPONSABILIDAD, YA SEA EN UNA ACCIÓN DE CONTRATO, AGRAVIO O DE OTRA MANERA, QUE SURJA DE O EN RELACIÓN CON EL SOFTWARE O EL USO O OTROS NEGOCIOS EN EL SOFTWARE.</string>
    <string name="sop_ap1">1. La aplicación con licencia bajo estos términos y condiciones contiene software con licencia de terceros que es propietario de ellos, valioso y protegido por derechos de propiedad intelectual internacionales. ("Software de terceros"). El usuario de la aplicación que contiene dicho Software de Terceros ('Usted') puede utilizar el Software de Terceros solo para sus propios fines internos durante el período durante el cual usted autorizó el Software de Terceros.</string>
    <string name="sop_ap2">2. Todos los derechos de propiedad intelectual en el Software de Terceros y en cualquier mejora o modificación de cualquiera de los anteriores serán y permanecerán total, única y exclusivamente propiedad del tercer licenciante ("Tercero Licenciante"). Usted no adquirirá ningún derecho título o interés en, bajo o bajo Derechos de Propiedad Intelectual en el Software de Terceros. Usted no adquirirá ningún otro derecho en relación con el Software de Terceros. Usted puede usar el Software de Terceros licenciado a Usted solo para Sus propósitos internos durante el período por el cual Usted obtuvo una licencia para usar el Software de Terceros. Usted acepta que no deberá divulgarlo ni comunicarlo a ninguna otra persona. La licencia otorgada a Usted es limitada y personal y no puede ser sublicenciada o transferida a terceros. Todos los derechos no expresamente concedidos quedan reservados. Todos los Software de Terceros serán mantenidos estrictamente confidenciales por Usted excepto en la medida expresamente permitida por estos términos."/></string>
    <string name="sop_ap3">3. Usted no publicará ni distribuirá ningún Software de Terceros, excepto con el previo consentimiento por escrito del Tercero Licenciante.</string>
    <string name="sop_ap4">4. El software de terceros se proporciona "tal cual". Es su responsabilidad asegurarse de que cumplan con sus requisitos. Todas las garantías implícitas son por este desestimadas y Usted confirma que no confía en ninguna representación, garantías o pactos excepto las garantías expresamente hechas aquí.</string>
    <string name="sop_ap5">5. Los Licenciantes de Terceros no serán responsables en relación con el Software de Terceros por cualquier pérdida indirecta o consecuente, daños punitivos o ejemplares, pérdida de beneficios o ahorros reales o potenciales, pérdida económica o pérdida de buena voluntad comercial o por el Pérdida o corrupción de datos. Ellos no se consideran como teniendo y no tendrán ninguna responsabilidad hacia usted que surja de o en conexión con su uso del Software de Terceros.</string>
    <string name="sop_ap6">6. El software de terceros se proporciona "tal cual". Es su responsabilidad asegurarse de que cumple con sus requisitos. Usted confirma que no confía en ninguna representación, garantías o pactos excepto las garantías expresamente hechas aquí. Esta cláusula es una garantía limitada. El Tercero Licenciante no hace ninguna otra garantía, expresa, implícita, legal o de otro tipo, y por la presente renuncia expresamente a todas las demás garantías, incluyendo pero no limitado a las garantías implícitas de título, comerciabilidad, idoneidad para un propósito particular o no infracción con Respecto al Software de Terceros.</string>
    <string name="sop_ap7"> 7. Estos términos y condiciones se regirán e interpretarán de acuerdo con las leyes de España cuyos tribunales tendrán jurisdicción exclusiva sobre cualquier y todas las disputas que surjan de o en relación con ellos.</string>
    <string name="imagen_logo">imagen_logo</string>
    <string name="title_activity_config">Configuración</string>

    <!-- Strings para 'About us'-->
    <string name="nombres">Nerea Gómez Domínguez\nSilvia Lendínez Fernández\nGonzalo Molina Díaz\nAdrián Panadero González</string>

    <!-- Strings para 'Configuracion' -->
    <string name="textRadio">Radio</string>
    <string name="textCategorias">Categorías </string>
    <string name="textUbi">Ubicación</string>
    <string name="tvKm"></string>

    <!--Strings para 'Contacto'-->
    <string name="cabecera">Desde esta pantalla puedes ponerte en contacto con nosotros para cualquier consulta que necesites.</string>
    <string name="correo">Tu correo</string>
    <string name="nombre">Tu nombre</string>
    <string name="asunto">Asunto</string>
    <string name="enviar">Enviar</string>
    <string name="msg">Escriba su mensaje...</string>

    <string name="firstTime">Parece que es la primera vez que estás con nosotros.. ¡Ve a "Configuración" para adaptar tus necesidades!</string>

    <!--Strings para 'FAQ'-->
    <string name="faq">FAQ - Preguntas frecuentes</string>
    <string name="p1">¿Cómo elijo las alertas que quiero ver en la pestaña ALERTAS?</string>
    <string name="r1">Puedes establecer tus preferencias desde la pestaña de Configuración. En ella podrás elegir el radio que quieres aplicar, las
        categorías en las que estás interesado y si quieres que tu ubicación esté activa o no.
    </string>
    <string name="p2">¿Cómo y cuando se aplica el radio que he elegido?</string>
    <string name="r2">El radio se aplica en todo momento, tengas o no la ubicación activada. Se toma como punto de origen tu ubicación
        exacta si la ubicación está activa, o el centro del distrito elegido si la tienes desactivada.
    </string>
    <string name="p3">¿Se guardan mis preferencias cuando salgo de la aplicación?</string>
    <string name="r3">Sí. No es necesario modificar tus preferencias cada vez que entres en la aplicación. Puedes modificarlas
        en cualquier momento.
    </string>
    <string name="p4">¿Cómo veo las alertas desde el mapa?</string>
    <string name="r4">Si entras en la pestaña de MAPA podrás ver diferentes marcadores. Al cliclar en ellos te mostrará el nombre del
        distrito y el número de alertas que hay en él. Se mostrarán solo los marcadores que entren en el radio elegido.
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="resume">resume</string>
    <string name="pause">pause</string>
    <string name="actualizar_mapa">Actualizar Mapa</string>
</resources>
