<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/LinearLayoutHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtHead"
            android:text="@string/cabecera"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="370dip"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp">
        </TextView>

    </LinearLayout>

    <LinearLayout android:id="@+id/LinearLayoutName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/etName"
        android:hint="@string/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:inputType="text"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp">
    </EditText>

    </LinearLayout>

    <LinearLayout android:id="@+id/LinearLayoutEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etEmail"
            android:hint="@string/correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:width="300dp"
            android:inputType="textEmailAddress">
        </EditText>

    </LinearLayout>

    <LinearLayout android:id="@+id/LinearLayoutAsunto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etSubject"
            android:hint="@string/asunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp">
        </EditText>
    </LinearLayout>

    <LinearLayout android:id="@+id/LinearLayoutMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etBody"
            android:hint="@string/msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="5"
            android:width="300dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp">
        </EditText>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:id="@+id/btnSend"
        android:text="@string/enviar"
        android:background="@layout/button_border"
        android:layout_gravity="center"
        android:textColor="@color/cardview_light_background">
    </Button>
</LinearLayout>