<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="a.madalert.madalert.ConfigActivity">

    <TextView
        android:id="@+id/textRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="29dp"
        android:layout_marginLeft="16dp"
        android:text="@string/textRadio"
        android:textSize="21sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/seekBarRadio"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textRadio"
        android:max="25"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/tvKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textRadio"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginLeft="26dp"
        android:text="@string/tvKm"
        android:textSize="21sp"
        android:textStyle="bold"
        android:layout_marginStart="26dp" />

    <TextView
        android:id="@+id/textCategorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/seekBarRadio"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="26dp"
        android:text="@string/textCategorias"
        android:textSize="21sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp" />


    <LinearLayout
        android:id="@+id/categorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/textCategorias"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp">

        <CheckBox
            android:id="@+id/todas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Todas"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="212dp" />

        <CheckBox
            android:id="@+id/dya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Desastres y accidentes"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="239dp" />

        <CheckBox
            android:id="@+id/terrorismo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Terrorismo"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="271dp" />

        <CheckBox
            android:id="@+id/criminalidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Criminalidad"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="295dp" />


        <CheckBox
            android:id="@+id/trafico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Trafico"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="212dp" />

        <CheckBox
            android:id="@+id/eventos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Eventos"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="239dp" />

        <CheckBox
            android:id="@+id/transp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Transporte público"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="271dp" />

        <CheckBox
            android:id="@+id/contaminacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contaminación"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="295dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textUbicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/categorias"
        android:layout_marginTop="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/textUbi"
        android:textSize="21sp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/switchUbi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textUbicacion"
        android:layout_alignParentStart="true"
        android:layout_marginStart="132dp"
        android:checked="false" />

    <Spinner
        android:id="@+id/spinnerDistritos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textUbicacion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="24dp"
        android:textSize="21sp"
        android:entries="@array/distritos_array"
        android:prompt="@string/distritos_prompt"
        android:spinnerMode="dialog"
        android:layout_marginStart="24dp" />

</RelativeLayout>
